# LTrace

./: .gitignore  CMakeLists.txt  main.cpp  object.cpp  object.h  ray.h  scene.cpp  scene.h  vector.h
